--- a/03-counter-app/package.json
+++ b/03-counter-app/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "babel-jest": "^29.0.2",
     "jest": "^29.0.2",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
