--- a/03-counter-app/package.json
+++ b/03-counter-app/package.json
@@ -15,14 +15,18 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "babel-jest": "^29.0.2",
-    "jest": "^29.0.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "vite": "^3.0.0",
     "whatwg-fetch": "^3.6.20"
   }
